# whoamenu

./: .gitignore  AGENTS.md  App.axaml  App.cs  Cargo.toml  LICENSE  MainWindow.cs  Program.cs  README.md  WhoaMenu.csproj  app.go  example.config  go.mod  go.sum  input  main.go
.github/workflows/: rust-security.yml  windows-release.yml
examples/: app-launcher.ps1  calculator.ps1  open-project.ps1  quick-clip.ps1
src/: cli.rs  config.rs  main.rs  monitor.rs  style.rs  ui.rs
