[package]
name = "whoamenu"
version = "0.2.0"
edition = "2021"

[dependencies]
eframe = { version = "0.31", default-features = true }
egui = "0.31"
clap = { version = "4.5", features = ["std", "derive"], default-features = false }
csscolorparser = "0.7"
font-kit = "0.14"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_HiDpi",
] }

[profile.release]
lto = true
codegen-units = 1
